--- a/web-dev-portfolio/index.html
+++ b/web-dev-portfolio/index.html
@@ -6,5 +6,9 @@
     <title><Web-Dev-Portfolio></Web-Dev-Portfolio></title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header></header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
