--- a/web-dev-portfolio/index.html
+++ b/web-dev-portfolio/index.html
@@ -3,11 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><Web-Dev-Portfolio></Web-Dev-Portfolio></title>
+    <title>Web-Dev-Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body>
-    <header></header>
+  <body class="open-sans-normal">
+    <header>
+      <nav>
+        <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <ul>
+          <li><a class="dark-2" href="">Portfolio</a></li>
+          <li><a class="dark-2" href="">Blog</a></li>
+          <li>
+            <a href=""><button>Hire Me</button></a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main></main>
     <footer></footer>
   </body>
