--- a/web-dev-portfolio/index.html
+++ b/web-dev-portfolio/index.html
@@ -5,21 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web-Dev-Portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <!-- Linking CSS file -->
   </head>
   <body class="open-sans-normal">
-    <header>
+    <!-- Applying font style -->
+    <header class="header">
+      <!-- Header section with background images -->
       <nav>
+        <!-- Navigation bar -->
         <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
+        <!-- Site title -->
         <ul>
-          <li><a class="dark-2" href="">Portfolio</a></li>
-          <li><a class="dark-2" href="">Blog</a></li>
+          <!-- Navigation menu -->
+          <li><a class="dark-2" href="#">Portfolio</a></li>
+          <!-- Portfolio link -->
+          <li><a class="dark-2" href="#">Blog</a></li>
+          <!-- Blog link -->
           <li>
-            <a href=""><button>Hire Me</button></a>
+            <a href="#"><button class="btn-primary">Hire Me</button></a>
+            <!-- Hire Me button -->
           </li>
         </ul>
       </nav>
+      <div class="banner">
+        <!-- Banner section -->
+        <div class="banner-content">
+          <!-- Banner content -->
+          <h4 class="banner-greetings dark-2">Hi, I am</h4>
+          <!-- Greetings -->
+          <h1 class="banner-title">Mary Hardy</h1>
+          <!-- Main title -->
+          <p class="banner-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex sunt
+            provident quibusdam facere quas voluptatum nam deleniti.
+          </p>
+          <!-- Description -->
+          <button class="btn-primary">Download CV</button>
+          <!-- Download CV button -->
+          <button class="btn-primary">Contact</button>
+          <!-- Contact button -->
+        </div>
+        <img
+          class="banner-profile-pic"
+          src="./fortfolio-resources/images/hardy.png"
+          alt="Hardy"
+        />
+        <!-- Profile picture -->
+      </div>
     </header>
     <main></main>
+    <!-- Main content area -->
     <footer></footer>
+    <!-- Footer area -->
   </body>
 </html>
